--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta charset="UTF-8" />
   <head>
+    <meta charset="UTF-8" />
+
     <title class="title">Elon Musk</title>
     <link href="style.css" rel="stylesheet" />
   </head>
@@ -10,10 +11,16 @@
     <div class="img-container">
       <img
         src="https://media.cnn.com/api/v1/images/stellar/prod/2023-11-30t135953z-879534570-rc2on4amk5bn-rtrmadp-3-twitter-musk.jpg?c=16x9&q=h_653,w_1160,c_fill/f_webp"
-        class="musk-image"
+        class="center"
         id="image"
+        alt=""
       />
     </div>
+    <blockquote>
+      "I would like to die on Mars. Just not on Impact."
+      <span> Elon Musk</span>
+    </blockquote>
+
     <h3><b>About Elon Musk</b></h3>
     <div id="paragraph">
       <p>
@@ -26,39 +33,40 @@
         August 2024 Forbes estimates his net worth to be US$247 billion.
       </p>
     </div>
+
     <h3 id="companies">List of Elon's Companies</h3>
-    <div>
-      <dt>
-        <di>1. <b>Tesla </b></di>
-        <dl>
-          Tesla, Inc. is an American multinational automotive and clean energy
-          company. Headquartered in Austin, Texas, it designs, manufactures and
-          sells battery electric vehicles (BEVs), stationary battery energy
-          storage devices from home to grid-scale, solar panels and solar
-          shingles, and related products and services.
-        </dl>
-        <di>2. <b>SpaceX </b></di>
-        <dl>
-          SpaceX, American aerospace company founded in 2002 that helped usher
-          in the era of commercial spaceflight. It was the first private company
-          to successfully launch and return a spacecraft from Earth orbit and
-          the first to launch a crewed spacecraft and dock it with the
-          International Space Station (ISS).
-        </dl>
-        <di>3. <b>X</b></di>
-        <dl>
-          Twitter, officially known as X since July 2023, is a social networking
-          service. It is one of the world's largest social media websites and
-          one of the most visited websites in the world.[3][4] Users can share
-          short text messages, images, and videos in posts (formerly "tweets")
-          and like or repost (formerly "retweets") other users' content.[5] X
-          also includes direct messaging, video and audio calling, bookmarks,
-          lists, communities, Grok chatbot, job search[6] and Spaces, a social
-          audio feature. Users can vote on context added by approved users using
-          the Community Notes feature.
-        </dl>
-      </dt>
-    </div>
+    <br />
+    <dt>
+      <di>1. <b>Tesla </b></di>
+      <dl>
+        Tesla, Inc. is an American multinational automotive and clean energy
+        company. Headquartered in Austin, Texas, it designs, manufactures and
+        sells battery electric vehicles (BEVs), stationary battery energy
+        storage devices from home to grid-scale, solar panels and solar
+        shingles, and related products and services.
+      </dl>
+      <di>2. <b>SpaceX </b></di>
+      <dl>
+        SpaceX, American aerospace company founded in 2002 that helped usher in
+        the era of commercial spaceflight. It was the first private company to
+        successfully launch and return a spacecraft from Earth orbit and the
+        first to launch a crewed spacecraft and dock it with the International
+        Space Station (ISS).
+      </dl>
+      <di>3. <b>X</b></di>
+      <dl>
+        Twitter, officially known as X since July 2023, is a social networking
+        service. It is one of the world's largest social media websites and one
+        of the most visited websites in the world.[3][4] Users can share short
+        text messages, images, and videos in posts (formerly "tweets") and like
+        or repost (formerly "retweets") other users' content.[5] X also includes
+        direct messaging, video and audio calling, bookmarks, lists,
+        communities, Grok chatbot, job search[6] and Spaces, a social audio
+        feature. Users can vote on context added by approved users using the
+        Community Notes feature.
+      </dl>
+    </dt>
+
     <br />
     <footer>If you would like to know more about Elon Musk :</footer>
     <a href="https://en.wikipedia.org/wiki/Elon_Musk">Click Here</a>
